chore: parase tw

--- a/biome.json
+++ b/biome.json
@@ -21,6 +21,9 @@
     }
   },
   "css": {
+    "parser": {
+      "tailwindDirectives": true
+    },
     "linter": {
       "enabled": false
     }
